# peer-sync

./: .gitignore  Cargo.toml  LICENSE  README.md
.live-plugins/sync/: plugin.kts
common/: Cargo.toml
common/src/: lib.rs
receiver/: Cargo.toml
receiver/src/: args.rs  error.rs  main.rs  middleware.rs  remove.rs  save.rs
transmitter/: Cargo.toml  README.md  config&args.go  go.mod  go.sum  main.go  read.go  send.go
transmitter/src/: args.rs  main.rs
