[package]
name = "receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
local-ip-address = "0.6.5"
serde_json = "1.0.101"
serde = { version = "1.0.225", features = ["derive"] }
clap = "4.5.41"
clap_derive = "4.5.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.16"
tracing-actix-web = "0.7.19"
subtle = "2.6.1"